@@ -1,3 +1,9 @@
+2012-03-01  Rajarshi Guha  <guhar@OfficeMac.local>
+
+	* R/props.R (get.property): Updated to check for null molecule
+	objects. Also made property retrieval more robust by checking
+	explicitly for exceptions
+
 2012-02-26  Rajarshi Guha  <guhar@niaaa-lptroach.niaaa.nih.gov>
 
 	* inst/doc/rcdk.Rnw: Updated vignette to not evaluate all descriptors for all molecules. 
